basic modified prototype

--- a/osrs/sotetseg/index.html
+++ b/osrs/sotetseg/index.html
@@ -14,8 +14,9 @@
 		</p>
 		<div id="par" align="center">Best possible time: 0.0 seconds (0 ticks)</div>
 		<div id="timer" align="center">Your time: 0.0 seconds (0 ticks, 0 stalled)</div>
-		<p align="center"></p>
+		<div id="container">
 		<canvas id="sotetseg-maze" tabindex="1"></canvas>
+		</div>
 		<p align="center">
 			<button onclick="reset()">Reset</button>
 			<button onclick="newSession()">New Maze</button>
